# genhosts

./: .gitignore  LICENSE  README.md  fetch_url.hpp  main.cpp  meson.build  parse_toml.hpp  user_utils.cpp
src/: argparse.cpp  argparse.hpp  fetch_url.cpp  file_utils.cpp  file_utils.hpp  main.cpp  parse_toml.cpp  restore_hosts.cpp  restore_hosts.hpp  string_utils.cpp  string_utils.hpp  toml_utils.cpp  toml_utils.hpp  url_utils.cpp  url_utils.hpp  user_utils.cpp  user_utils.hpp
tests/: config.toml
